--- a/curriculum-front/src/sass/index.sass
+++ b/curriculum-front/src/sass/index.sass
@@ -6,3 +6,4 @@
 @import 'components/home'
 @import 'components/upsert-curriculum'
 @import 'components/display-curriculum'
+@import 'components/display-curricula'
